--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
       <div class="item">
         <img src="./assets/cloth3.webp" alt="cloth3" class="itemImg" />
-        <p class="itemDescription">Men's Trackshut</p>
+        <p class="itemDescription">Men's Tracksuit</p>
         <p class="buyNowText">Buy Now</p>
       </div>
 
@@ -341,7 +341,7 @@
           alt="electronic img"
           class="itemImg"
         />
-        <p class="itemDescription">Men's Trackshut</p>
+        <p class="itemDescription">Men's Tracksuit</p>
         <p class="buyNowText">Buy Now</p>
       </div>
 
