Made some changes

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 class="hoverNav"
               >
                 <option value="">Profile</option>
-                <option value="signup.html">Signup</option>
-                <option value="signin.html">Signin</option>
+                <option value="signUp.html">Signup</option>
+                <option value="signIn.html">Signin</option>
               </select>
             </span>
           </div>
