--- a/signIn.html
+++ b/signIn.html
@@ -7,7 +7,7 @@
     <title>Sign up</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="./signup.css" />
+    <link rel="stylesheet" href="./signUp.css" />
   </head>
   <body>
     <div id="container">
@@ -216,6 +216,6 @@
         </div>
       </div>
     </div>
-    <script src="./Signin.js"></script>
+    <script src="./SignIn.js"></script>
   </body>
 </html>
