--- a/signUp.html
+++ b/signUp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="./signup.css" />
+    <link rel="stylesheet" href="./signUp.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -212,6 +212,6 @@
         </div>
       </div>
     </div>
-    <script src="./signup.js"></script>
+    <script src="./signUp.js"></script>
   </body>
 </html>
