--- a/signUp.html
+++ b/signUp.html
@@ -99,8 +99,8 @@
             >
               <select name="forma" onchange="location = this.value;">
                 <option value="">Profile</option>
-                <option value="signup.html">Signup</option>
-                <option value="signin.html">Signin</option>
+                <option value="signUp.html">Signup</option>
+                <option value="signIn.html">Signin</option>
               </select>
             </span>
           </div>
