--- a/signIn.html
+++ b/signIn.html
@@ -104,8 +104,8 @@
             >
               <select name="forma" onchange="location = this.value;">
                 <option value="">Profile</option>
-                <option value="signup.html">Signup</option>
-                <option value="signin.html">Signin</option>
+                <option value="signUp.html">Signup</option>
+                <option value="signIn.html">Signin</option>
               </select>
             </span>
           </div>
@@ -216,6 +216,6 @@
         </div>
       </div>
     </div>
-    <script src="./SignIn.js"></script>
+    <script src="./signIn.js"></script>
   </body>
 </html>
